--- a/src/main/resources/webserver/template/automation/admin/switchserverlist.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserverlist.html
@@ -9,7 +9,7 @@
         function search() {
 
             var value = $('.ui.search input').val();
-            window.location = '/automation/admin/switchserverlist?filter=' + value;
+            window.location = '/automation/admin/switchserver?filter=' + value;
         }
 
         $(function () {
@@ -28,89 +28,97 @@
 <body>
 {% include '/webserver/template/automation/admin/headline.html' with {module: 'switchserver'} %}
 <main class="ui main container">
-    <div class="ui segment">
-        <div>
-            <h2 class="ui header">Schaltserver verwalten</h2>
-        </div>
-        {% if success is defined %}
-        <div class="ui message {% if success %}success{% else %}error{% endif %}">
-            {{ message | escape }}
-        </div>
+    <h1 class="ui header top attached">Schaltserver verwalten</h1>
+    {% if success is defined %}
+    <div class="ui message icon attached {% if success %}success{% else %}error{% endif %}">
+        {% if success %}
+        <i class="check icon green"></i>
+        {% else %}
+        <i class="remove icon red"></i>
         {% endif %}
-        <div class="ui divider"></div>
-        <div class="ui top attached menu inverted blue">
-            <a class="item" href="/automation/admin/switchserverform">
-                <i class="plus icon"></i> hinzuf&uuml;gen
-            </a>
-            <div class="right menu">
-                <div class="ui right aligned category search item">
-                    <div class="ui icon input">
-                        <input class="prompt" type="text" placeholder="Search ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
-                        <i class="search link icon"></i>
-                    </div>
+        <div class="content">
+            <p>{{ message | escape }}</p>
+        </div>
+    </div>
+    {% endif %}
+    <div class="ui attached menu inverted blue">
+        <a class="item" href="/automation/admin/switchserverform">
+            <i class="plus icon"></i> hinzuf&uuml;gen
+        </a>
+        <div class="right menu">
+            <div class="ui right aligned category search item">
+                <div class="ui icon input">
+                    <input class="prompt" type="text" placeholder="Search ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
+                    <i class="search link icon"></i>
                 </div>
             </div>
         </div>
-        <table class="ui celled table bottom attached">
-            <tbody>
-            {% if pagination.getSize() > 0 %}
+    </div>
+    {% if pagination.getSize() > 0 %}
+    <div class="ui segment attached">
+        <div class="ui divided items attached {% if pagination.hasPages() == false %}bottom{% endif %}">
             {% for element in pagination.getCurrentPageElements() %}
             {% set randomId = randomstr() %}
-            <tr>
-                <td {% if element.isEnabled() == false %}class="disabled"{% endif %}>
-                    <h3>{{ element.getName() | escape }}</h3>
-                    <p>{% if element.getDescription().isPresent() %}{{ element.getDescription().get() | escape }}{% endif %}</p>
-                </td>
-                <td style="width: 50px;">
-                    <div class="ui icon buttons">
-                        <button title="bearbeiten" class="ui button" onclick="window.location = '/automation/admin/switchserverform?id={{ element.getId() }}'"><i class="edit icon orange large"></i></button>
-                        <button title="l&ouml;schen" class="ui button" onclick="$('#{{ randomId }}').modal('show')"><i class="remove red icon large"></i></button>
+            <div class="item">
+                <div class="content">
+                    <div class="header">{{ element.getName() | escape }}</div>
+                    <div class="meta">
+                        <span>IP Adresse: {{ element.getIpAddress() | escape }}:{{ element.getPort() | escape }}</span>
                     </div>
-                    <div class="ui basic modal" id="{{ randomId }}">
-                        <div class="ui icon header">
-                            <i class="delete icon"></i>
-                            Schaltserver l&ouml;schen
+                    {% if element.getDescription().isPresent() %}
+                    <div class="description">
+                        <p>{{ element.getDescription().get() | escape }}</p>
+                    </div>
+                    {% endif %}
+                    <div class="extra">
+                        <div class="ui right floated">
+                            <a title="bearbeiten" class="ui button orange basic" href="/automation/admin/switchserverform?id={{ element.getId() }}"><i class="edit icon"></i> bearbeiten</a>
+                            <button title="l&ouml;schen" class="ui button red basic" onclick="$('#{{ randomId }}').modal('show')"><i class="remove icon"></i> l&ouml;schen</button>
                         </div>
-                        <div class="content">
-                            <p>Bist du sicher das du den Schaltserver l&ouml;schen m&ouml;chtest?</p>
-                        </div>
-                        <div class="actions">
-                            <div class="ui red basic cancel inverted button">
-                                <i class="remove icon"></i>
-                                Nein
+                        {% if element.isEnabled() == false %}
+                        <div class="ui label grey">Deaktiviert</div>
+                        {% endif %}
+                        <div class="ui basic modal" id="{{ randomId }}">
+                            <div class="ui icon header">
+                                <i class="delete icon"></i>
+                                Schaltserver l&ouml;schen
                             </div>
-                            <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/switchserverdelete?id={{ element.getId() }}'">
-                                <i class="checkmark icon"></i>
-                                Ja
+                            <div class="content">
+                                <p>Bist du sicher das du den Schaltserver l&ouml;schen m&ouml;chtest?</p>
+                            </div>
+                            <div class="actions">
+                                <div class="ui red basic cancel inverted button">
+                                    <i class="remove icon"></i>
+                                    Nein
+                                </div>
+                                <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/switchserverdelete?id={{ element.getId() }}'">
+                                    <i class="checkmark icon"></i>
+                                    Ja
+                                </div>
                             </div>
                         </div>
                     </div>
-                </td>
-            </tr>
+                </div>
+            </div>
             {% endfor %}
-            {% else %}
-            <tr>
-                <td colspan="2">
-                    <div class="ui message info">
-                        <p>keine Schaltserver vorhanden</p>
-                    </div>
-                </td>
-            </tr>
-            {% endif %}
-            </tbody>
-            {% if pagination.hasPages() %}
-            <tfoot>
-                <tr>
-                    <th colspan="3">
-                        <div class="ui right floated pagination menu">
-                            {% include '/webserver/template/automation/admin/pagination.html' with {pagination: pagination} %}
-                        </div>
-                    </th>
-                </tr>
-            </tfoot>
-            {% endif %}
-        </table>
+        </div>
     </div>
+    {% if pagination.hasPages() %}
+    <div class="ui segment bottom attached clearing">
+        <div class="ui right floated pagination menu">
+            {% include '/webserver/template/automation/admin/pagination.html' with {pagination: pagination} %}
+        </div>
+    </div>
+    {% endif %}
+    {% else %}
+    <div class="ui icon info message bottom attached large">
+        <i class="info circle icon black"></i>
+        <div class="content">
+            <p>keine Schaltserver gefunden</p>
+        </div>
+    </div>
+    {% endif %}
+    <div style="height: 50px;"></div>
 </main>
 </body>
 </html>
