--- a/src/main/resources/webserver/template/global/admin/settings.html
+++ b/src/main/resources/webserver/template/global/admin/settings.html
@@ -14,30 +14,31 @@
 <body>
 {% include '/webserver/template/global/admin/headline.html' with {module: 'settings'} %}
 <main class="ui main container">
-    <div class="ui segment">
-        <div>
-            <h2 class="ui header">Einstellungen</h2>
-        </div>
-        <div class="ui divider"></div>
+    <form class="ui form" method="post" action="/admin/settings">
+        <h1 class="ui header top attached">Einstellungen</h1>
         {% if success is defined %}
-        {% if success %}
-        <div class="ui message success">
-                    Die Einstellungen wurden erfolgreich gespeichert
-                </div>
-        {% else %}
-        <div class="ui message error">
-                    Die Einstellungen konnten nicht gespeichert werden
-                </div>
+        <div class="ui visible message icon attached {% if success %}success{% else %}error{% endif %}">
+            {% if success %}
+            <i class="check icon green"></i>
+            <div class="content">
+                <p>Die Einstellungen wurden erfolgreich gespeichert</p>
+            </div>
+            {% else %}
+            <i class="remove icon red"></i>
+            <div class="content">
+                <p>Die Einstellungen konnten nicht gespeichert werden</p>
+            </div>
+            {% endif %}
+        </div>
         {% endif %}
-        {% endif %}
-        <form class="ui form" method="post" action="/admin/settings">
+        <div class="ui segment attached">
             <div class="ui top attached tabular menu">
                 <div data-tab="webserverUnsave" class="active item" style="cursor: pointer;">Webserver (unverschl&uuml;sselt)</div>
                 <div data-tab="webserverSave" class="item" style="cursor: pointer;">Webserver (verschl&uuml;sselt)</div>
             </div>
             <div data-tab="webserverUnsave" class="ui bottom attached tab segment active">
                 <div class="ui icon info message">
-                    <i class="info icon black"></i>
+                    <i class="info circle icon black"></i>
                     <div class="content">
                         <p>&Auml;nderungen an den Einstellungen werden erst nach einem Neustart des Servers &uuml;bernommen.</p>
                     </div>
@@ -49,7 +50,7 @@
             </div>
             <div data-tab="webserverSave" class="ui bottom attached tab segment">
                 <div class="ui icon info message">
-                    <i class="info icon black"></i>
+                    <i class="info circle icon black"></i>
                     <div class="content">
                         <p>&Auml;nderungen an den Einstellungen werden erst nach einem Neustart des Servers &uuml;bernommen.</p>
                     </div>
@@ -67,11 +68,12 @@
                     <input name="managerPassword" type="password" value="">
                 </div>
             </div>
-            <div class="ui divider"></div>
+        </div>
+        <div class="ui segment bottom attached">
             <input type="submit" class="ui button primary" value="speichern">
             <input type="reset" class="ui button" value="reset">
-        </form>
-    </div>
+        </div>
+    </form>
 </main>
 </body>
 </html>
