update search placeholder

--- a/src/main/resources/webserver/template/automation/admin/sensorvalues/sensorvalueslist.html
+++ b/src/main/resources/webserver/template/automation/admin/sensorvalues/sensorvalueslist.html
@@ -192,7 +192,7 @@
             </div>
             <div class="ui right aligned category search item">
                 <div class="ui icon input">
-                    <input class="prompt" type="text" placeholder="Search ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
+                    <input class="prompt" type="text" placeholder="Suche ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
                     <i class="search link icon"></i>
                 </div>
             </div>
