--- a/src/main/resources/webserver/template/automation/admin/switchserver/switchserverlist.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserver/switchserverlist.html
@@ -48,7 +48,7 @@
         <div class="right menu">
             <div class="ui right aligned category search item">
                 <div class="ui icon input">
-                    <input class="prompt" type="text" placeholder="Search ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
+                    <input class="prompt" type="text" placeholder="Suche ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
                     <i class="search link icon"></i>
                 </div>
             </div>
