--- a/src/main/resources/webserver/template/automation/user/index.html
+++ b/src/main/resources/webserver/template/automation/user/index.html
@@ -4,20 +4,90 @@
     <meta charset="UTF-8">
     <title>Automatisierung</title>
     {% include '/webserver/template/header.html' %}
+    <script src="/static/notify/notify.min.js"></script>
     <link rel="manifest" href="/static/manifest/automationmanifest.json">
+    <script type="text/javascript">
+
+        function switchDevice(roomId, devId, command) {
+
+            $.getJSON('/automation/switch?roomid=' + roomId + '&id=' + devId + '&command=' + command)
+                .done(function(data, textStatus) {
+
+                    if(textStatus == 'success' && data.success == true) {
+
+                        //Befehl erfolgreich ausgeführt
+                        $.notify("Befehl erfolgreich ausgeführt", "success");
+                    } else {
+
+                        //Fehler
+                        $.notify(data.message, "error");
+                    }
+                })
+                .fail(function () {
+
+                    //Fehler
+                    $.notify("Der Befehl konnte nicht ausgeführt werden", "error");
+                });
+        }
+    </script>
 </head>
 <body>
 {% include '/webserver/template/automation/user/headline.html' %}
-<main class="ui main container">
-    <div class="ui segment">
-        <div class="ui link cards four column doubling stackable">
-            <div class="card" onclick="window.location = ''">
-                <div class="image">
-                    <img src="/static/img/icon/smart.png">
+<main class="ui main" style="padding: 0 10px;">
+    <div class="ui grid relaxed">
+        <div class="four wide computer only column">
+            <div class="ui link divided items">
+                {% for room in rooms %}
+                <div class="item" onclick="window.location='/automation/index?id={{ room.getId().get() | escape }}'">
+                    <div class="ui mini image middle aligned">
+                        <img src="/static/img/iconset/{{ room.getIconFile() | escape }}">
+                    </div>
+                    <div class="content middle aligned">
+                        <div class="header" style="width: 100%;">
+                            {% if room.getId().equals(activeRoom.getId()) %}
+                            <div class="ui grid">
+                                <div class="fourteen wide column">
+                                    {{ room.getDisplayText() | escape }}
+                                </div>
+                                <div class="two wide column">
+                                    <i class="arrow right icon"></i>
+                                </div>
+                            </div>
+                            {% else %}
+                            {{ room.getName() | escape }}
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="sixteen wide mobile tablet twelve wide computer column">
+            <h1 class="ui header">{{ activeRoom.getName() | escape }}</h1>
+            {% if success is defined %}
+            <div class="ui message icon {% if success %}success{% else %}error{% endif %}">
+                {% if success %}
+                <i class="check icon green"></i>
+                {% else %}
+                <i class="remove icon red"></i>
+                {% endif %}
                 <div class="content">
-                    <div class="header">SmartHome</div>
+                    <p>{{ message | escape }}</p>
                 </div>
+            </div>
+            {% endif %}
+            <div class="ui relaxed grid" style="margin-top: 10px;">
+                {% for element in activeRoom.getRoomElemenstSorted() %}
+                    {% if element.getType() == 'DIVIDER_ELEMENT' %}
+                        {% include '/webserver/template/automation/user/elements/divider.html' %}
+                    {% elseif element.getType() == 'BUTTON_ELEMENT' %}
+                        {% include '/webserver/template/automation/user/elements/button.html' %}
+                    {% elseif element.getType() == 'SENSOR_ELEMENT' %}
+                        {% include '/webserver/template/automation/user/elements/sensor.html' %}
+                    {% elseif element.getType() == 'VIRTUAL_SENSOR_ELEMENT' %}
+                        {% include '/webserver/template/automation/user/elements/virtualsensor.html' %}
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
